--- a/index.html
+++ b/index.html
@@ -4,8 +4,60 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>My Order Now - App</title>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+	<script src="https://kit.fontawesome.com/464d92f441.js" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="css/main.css"> <!-- este link siempre debe estar al final -->
 </head>
 <body>
+	<header>
+		<div class="container">
+			<div class="row justify-content-center align-items-center">
+				<div class="col-auto">
+					<h1>MyOrderNow</h1>
+				</div>
+				<div class="col-auto">
+					<div class="avatar-container" data-target="#profileOptions" data-toggle="modal">
+						<img src="img/avatar.jpg" alt="">
+						<i class="fas fa-cog"></i>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- Modal -->
+		<div class="modal fade" id="profileOptions" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+		  <div class="modal-dialog">
+		    <div class="modal-content">
+
+		      <div class="modal-header">
+		        <h5 class="modal-title">Opciones</h5>
+		        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+		          <span aria-hidden="true">&times;</span>
+		        </button>
+		      </div>
+
+		      <div class="modal-body">
+		        <ul class="profile-options-list">
+		        	<li>
+		        		<a href=""><i class="fas fa-user">Mi perfil</i></a>
+		        	</li>
+		        	<li>
+		        		<a href=""><i class="fas fa-map-market-alt">Mis direcciones</i></a>
+		        	</li>
+		        	<li>
+		        		<a href=""><i class="fas fa-credit-card">Mis tarjetas</i></a>
+		        	</li>
+		        	<li>
+		        		<a href="" class="text-danger"><i class="fas fa-times-circle">Cerrar sesión</i></a>
+		        	</li>
+		        </ul>
+		      </div>
+		    </div>
+		  </div>
+		</div>			
+	</header>
 	
+	<script src="js/jquery.js"></script> <!-- siempre se colocan los script en este orden -->
+	<script src="js/popper.js"></script>
+	<script src="js/bootstrap.min.js"></script>
 </body>
 </html>
