--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
 					<button type="button" class="btn btn-primary btn-block">Buscar</button>
 				</form>
 			</div>
-			<div class="product-list-container">
+			<div class="products-list-container">
+				<h2 class="section-title">Los más pedidos</h2>
 				<ul>
 					<li>
 						<a href="#">
@@ -186,6 +187,12 @@
 						</a>
 					</li>
 				</ul>
+				<div class="pt-4 pb-5 text-center">
+					<a href="#" class="btn btn-block btn-link">
+						<span class="d-block mb-2">Ver más productos</span>
+						<i class="fas fa-arrow-down"></i>
+					</a>
+				</div>
 			</div>
 		</div>
 	</main>
